@@ -42,6 +42,7 @@ Version 1.11.0+svn:
      leader, but with new semantics -- only that leader's recruits/recalls will
      be presented as options.
    * The statistics window can now show per-scenario statistics.
+   * The sidebar now includes specials when reporting a weapon's damage.
 
  * Whiteboard
    * Don't end turn if executing all actions in another way than using the "end turn" button/hotkey. (bug #19901)
