@@ -39,6 +39,7 @@ Version 1.11.0+svn:
      be presented as options.
    * Fog/shroud clearing has been reworked to be more timely and consistent.
    * The statistics window can now show per-scenario statistics.
+   * The sidebar now includes specials when reporting a weapon's damage.
  * Whiteboard
    * Don't end turn if executing all actions in another way than using the "end turn" button/hotkey. (bug #19901)
  * WML engine:
